# Generated by Django 5.1.15 on 2026-06-18 14:43

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('corpora', '0001_initial'),
        ('schemes', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Project',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('slug', models.SlugField(max_length=120, unique=True)),
                ('name', models.CharField(max_length=200)),
                ('guidelines', models.TextField(blank=True)),
                ('status', models.CharField(choices=[('active', 'Active'), ('paused', 'Paused'), ('closed', 'Closed')], default='active', max_length=16)),
                ('settings', models.JSONField(blank=True, default=dict)),
                ('corpus', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='projects', to='corpora.corpus')),
                ('scheme', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='projects', to='schemes.labelscheme')),
            ],
            options={
                'ordering': ['slug'],
            },
        ),
        migrations.CreateModel(
            name='Assignment',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('in_progress', 'In progress'), ('done', 'Done')], default='pending', max_length=16)),
                ('due_at', models.DateTimeField(blank=True, null=True)),
                ('assignee', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assignments', to=settings.AUTH_USER_MODEL)),
                ('document', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assignments', to='corpora.document')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assignments', to='projects.project')),
            ],
            options={
                'ordering': ['project', 'document'],
                'constraints': [models.UniqueConstraint(fields=('project', 'document', 'assignee'), name='uniq_assignment_project_doc_assignee')],
            },
        ),
        migrations.CreateModel(
            name='ProjectMembership',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('role', models.CharField(choices=[('annotator', 'Annotator'), ('reviewer', 'Reviewer'), ('lead', 'Lead')], default='annotator', max_length=16)),
                ('joined_at', models.DateTimeField(auto_now_add=True)),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='memberships', to='projects.project')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='memberships', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'constraints': [models.UniqueConstraint(fields=('project', 'user'), name='uniq_membership_project_user')],
            },
        ),
    ]
