# Generated by Django 5.1.15 on 2026-06-18 14:43

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('corpora', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='TranslationSet',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('name', models.CharField(max_length=200)),
                ('target_language', models.CharField(max_length=12)),
                ('folder_path', models.CharField(max_length=500)),
                ('mapping_strategy', models.CharField(default='by_external_id', max_length=60)),
                ('status', models.CharField(default='declared', max_length=40)),
                ('corpus', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='translation_sets', to='corpora.corpus')),
            ],
            options={
                'abstract': False,
            },
        ),
        migrations.CreateModel(
            name='Translation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('text', models.TextField()),
                ('provenance', models.CharField(default='file', max_length=120)),
                ('document', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='translations', to='corpora.document')),
                ('sentence', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, related_name='translations', to='corpora.sentence')),
                ('translation_set', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='translations', to='translations.translationset')),
            ],
            options={
                'ordering': ['translation_set', 'document', 'sentence'],
                'constraints': [models.UniqueConstraint(fields=('translation_set', 'document', 'sentence'), name='uniq_translation_set_doc_sentence')],
            },
        ),
    ]
